<resources>
    <string name="app_name">Savings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">profile</string>
    <string name="notification">Notification</string>
    <string name="communicate">Communicate</string>
    <string name="calender">Calender</string>
    <string name="saving">Saving</string>
    <string name="current_balance">Current Balance</string>
    <string name="_0000">0000</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="transactions">Transactions</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="enter_current_balance">Enter your current balance</string>
    <string name="all_transactions">All Transactions</string>
    <string name="name">Name</string>
    <string name="set_value">Set Value</string>
    <string name="settings">Settings</string>
    <string name="rupees">Rupees</string>
    <string name="debited">DEBITED</string>
    <string name="credited">CREDITED</string>
    <string name="set_rupees">Set Rupees</string>
</resources>
