<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInfo">

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="269dp"
        android:layout_height="68dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/enter_a_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/next_userInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="202dp"
        android:layout_height="73dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="56dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toTopOf="@+id/userInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_userInfo"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="next_userInfo_onClick"/>
</android.support.constraint.ConstraintLayout>